--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
-<html>
+<html style = "text-align:center">
 	<head>
+		<title>MOVIE RESERVATION</title>
 		<h1>KIM's MOVIE RESERVATION</h1>
 	</head>
 	<body>
